fix alignment issues on IE Take 2

--- a/src/assets/scss/templates/_page-case-study.scss
+++ b/src/assets/scss/templates/_page-case-study.scss
@@ -11,6 +11,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+
+    .single-column__content {
+      margin: 0;
+    }
 
     .single-column__content__heading {
       color: $marshPassion;
